--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     ],
     "playing": "test",
     "playing_type": "streaming",
-    "status": "dnd"
+    "status": "dnd",
+    "version": "None"
 }
