--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-discord
+discord.py-papachar==1.0.1 # using a slightly modified version of disc.py, basically the same thing.
 psutil
 aiohttp==3.6.0
