events(on_guild_join): log join events
Signed-off-by: Andreas Papacharalampous <andreas@apap04.com>

--- a/config.json.example
+++ b/config.json.example
@@ -5,5 +5,5 @@
     "playing": "ap help",
     "playing_type": "",
     "status": "dnd",
-    "accent_color": "000"
+    "accent_color": "000" (do not remove this!)
 }
