--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 discord.py-papachar==2.0.2
 dislash.py
-python-i18n
+python-i18n[yaml]
 requests
 psutil~=5.8.0
-aiohttp==3.6.0
+aiohttp==3.7.4.post0
