[MERGE] events: added support for channel configurations
Signed-off-by: Andreas Papacharalampous <andreas@apap04.com>
Co-authored-by: flower <flower@apap04.com>

--- a/config.json.example
+++ b/config.json.example
@@ -5,5 +5,8 @@
     "playing": "ap help",
     "playing_type": "",
     "status": "dnd",
-    "accent_color": "000" (do not remove this!)
+    "accent_color": "000", (do not remove this!)
+    "error_reporting": "",
+    "guild_log": "",
+    "message_logging": ""
 }
