--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "prefix": ".",
+    "prefix": "$",
     "owners": [403308385539194880],
-    "playing": ".help",
+    "playing": "$help",
     "playing_type": "",
     "status": "dnd",
     "error_reporting": "932369210611494982",
