mod: THIS SUCKSSS
Signed-off-by: Andreas <me@apap04.com>

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "owners": [403308385539194880],
-    "playing": "$help",
+    "playing": ",help",
     "playing_type": "",
     "status": "dnd",
     "error_reporting": "954634303852122112",
-    "guild_log": ""
+    "guild_log": "954157839235022888"
 }
