change some values

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
 DISCORD_PREFIX=
 DISCORD_TOKEN=
-DISCORD_CLIENTID=
-DISCORD_GUILDID=
-DISCORD_CLIENTSECRET=
-DISCORD_ERRORWEBHOOK=
-DISCORD_DEV=
 MONGO_DB=
+MONGO_NAME=
+REDIS_URL=
