--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
-  - init: pip install -r requirements.txt
-    command: python bot.py
+  - init: python -m pip install -r requirements.txt
+    command: python -m pip install -r requirements.txt
