--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "python.formatting.provider": "black",
-    "files.eol": "\n",
-    "files.insertFinalNewline": true,
-    "editor.rulers": [80]
+  "python.formatting.provider": "black",
+  "files.eol": "\n",
+  "files.insertFinalNewline": true,
+  "editor.rulers": [80],
+  "editor.formatOnSave": true
 }
