--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "npx pretty-quick --staged"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "3.3.0"
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3"
   },
   "config": {
     "commitizen": {
