--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "endOfLine": "lf",
+  "trailingComma": "es5",
   "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
   "singleQuote": true,
-  "tabWidth": 2
+  "printWidth": 80
 }
