--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "private": true,
   "scripts": {
     "prepare": "husky install",
-    "lint": "npx pretty-quick --staged"
+    "lint": "npx pretty-quick --staged",
+    "lint-api": "prettier --config .prettierrc --write ./**/*.ts"
   },
   "devDependencies": {
     "cz-conventional-changelog": "3.3.0",
     "husky": "^8.0.0",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1"
   },
   "config": {
     "commitizen": {
