--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "format": "pretty-quick --staged",
-    "lint": "eslint . --ext .ts",
-    "prepare": "husky install"
+    "lint": "eslint . --ext .ts"
   },
   "lint-staged": {
     "src/**/*.ts": "eslint --fix"
