dashboard: use tsc over next lint
Signed-off-by: Andreas <me@apap04.com>

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "tsc --noEmit",
     "format-all": "prettier --config .prettierrc --write ./**/*.tsx",
     "format": "npx pretty-quick --staged",
     "postinstall": "prisma generate",
