--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "commit": "cz"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "3.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
