--- a/api/package.json
+++ b/api/package.json
@@ -1,21 +1,22 @@
 {
   "name": "toilet-api",
   "version": "0.0.1",
-  "description": "Toilet API to retrieve and set bot  information",
-  "main": "src/index.js",
+  "description": "Toilet API to retrieve and set bot information",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon src/index.ts",
+    "build": "tsc -p ./tsconfig.json",
     "format": "pretty-quick --staged",
+    "format-all": "prettier --config prettier.config.js --write ./**/*.{ts,tsx,js,jsx}",
+    "types": "tsc --noEmit",
     "lint": "eslint . --ext .ts"
-  },
-  "lint-staged": {
-    "src/**/*.ts": "eslint --fix"
   },
   "repository": "https://github.com/Greek/bot-api.git",
   "author": "Andreas <me@apap04.com>",
   "license": "SEE LICENSE IN LICENSE",
   "private": false,
   "dependencies": {
+    "@charted/prettier-config": "^1.0.1",
     "@typegoose/typegoose": "^9.10.1",
     "consola": "^2.15.3",
     "dotenv": "^16.0.1",
