--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,20 +1,30 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "target": "es5",
-    "module": "commonjs",
-    "lib": ["dom"],
+    "lib": ["es6", "es2017", "esnext.asynciterable"],
+    "sourceMap": false,
+    "outDir": "./build",
+    "rootDir": "./src",
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
+    "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "types": ["node", "express"],
-    "typeRoots": ["./node_modules/@types"]
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.spec.ts"]
+  "include": ["process.d.ts", "**/*.ts"],
+  "exclude": ["node_modules"]
 }
