Add docker compose
Signed-off-by: Andreas <me@apap04.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-DISCORD_PREFIX=
-DISCORD_TOKEN=
-MONGO_DB=
-MONGO_NAME=
-REDIS_URL=
-TOP_GG_TOKEN=
+DISCORD_PREFIX= # Your discord prefix
+DISCORD_TOKEN= # Your discord token
+MONGO_DB= # Your Mongo DB URL
+MONGO_NAME= # Your Mongo DB db name
+REDIS_URL= # (Remove to use docker compose redis) Your Redis server (redis://default:REDIS_PASS@192.168.92.81:6379/ for Docker-Compose)
+REDIS_PASS= # Redis Password specified for Docker Compose. Use this in your Redis URL variable!
+LAST_FM_KEY= # Last.FM key
+LAST_FM_SECRET= # Last.FM secret
+TOP_GG_TOKEN= # Top.GG token
