--- a/config.json
+++ b/config.json
@@ -1,8 +1,10 @@
 {
-  "owners": [403308385539194880],
+  "owners": [
+    403308385539194880
+  ],
   "playing": ",help",
   "playing_type": "",
   "status": "dnd",
-  "error_reporting": "954822061044432896",
+  "error_reporting": "932369210611494982",
   "guild_log": "954157839235022888"
 }
