okay. now this is cool
Signed-off-by: Andreas <me@apap04.com>

--- a/config.json
+++ b/config.json
@@ -1,10 +1,8 @@
 {
-  "owners": [
-    403308385539194880
-  ],
+  "owners": [403308385539194880],
   "playing": ",help",
   "playing_type": "",
   "status": "dnd",
-  "error_reporting": "932369210611494982",
+  "error_reporting": "980261047657193483",
   "guild_log": "954157839235022888"
 }
