--- a/.pylintrc
+++ b/.pylintrc
@@ -158,7 +158,9 @@ disable=raw-checker-failed,
         missing-class-docstring,
         missing-module-docstring,
         W0703,
-        W0702
+        W0702,
+        no-name-in-module,
+        import-error
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
