--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,6 +23,28 @@ services:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
       - cache:/data
 
+  mongo:
+    container_name: toilet-mongo-store
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+    - 27017:27017
+
+  mongo-express:
+    container_name: toilet-db-viewer
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://root:password@localhost:27017/
+
+
 volumes:
   cache:
     driver: local
