Migrate MongoDB to PSQL (#14)
* add psql + make logger global

Signed-off-by: Andreas <me@apap04.com>

* prisma prisma prisma

Signed-off-by: Andreas <me@apap04.com>

* use mongo for message log whitelists

Signed-off-by: Andreas <me@apap04.com>

* add create_error_log to bot class

Signed-off-by: Andreas <me@apap04.com>

* Replace pymongo with motor

Signed-off-by: Andreas <me@apap04.com>

* pt1: migrate commands to psql

Signed-off-by: Andreas <me@apap04.com>

* Added docker-compose for psql

Signed-off-by: Andreas <me@apap04.com>

* add redis to docker-compose

Signed-off-by: Andreas <me@apap04.com>

* okay. now this is cool

Signed-off-by: Andreas <me@apap04.com>

* add mongo to docker

Signed-off-by: Andreas <me@apap04.com>

* Change readme and add `.env.dev`

Signed-off-by: Andreas <me@apap04.com>

Signed-off-by: Andreas <me@apap04.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 nextcord
 python-i18n[yaml]
 python-dotenv
-pymongo
+motor
 pymongo[srv]
 redis>=4.2.0rc1
 requests
@@ -13,3 +13,5 @@ pytimeparse
 pylast
 pylint
 black
+asyncpg
+prisma
