--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __pycache__/
 .Python
 env/
 venv/
+venv-nix/
 build/
 develop-eggs/
 dist/
@@ -38,3 +39,4 @@ media/*
 
 # other
 node_modules
+docker/postgres-data/
