--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     container_name: toilet-dev-db
     image: postgres
     environment:
-      - POSTGRES_USER=toilet
-      - POSTGRES_PASSWORD=toilet
-      - POSTGRES_DB=toilet
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=app
     ports:
       - 5432:5432
     volumes:
