--- a/toilet-dev-docker/docker-compose.yml
+++ b/toilet-dev-docker/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
   database:
-    container_name: toilet-dev-db
+    container_name: database-dev
     image: postgres
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=password
       - POSTGRES_DB=app
     ports:
       - 5432:5432
     volumes:
-      - ./postgres-data:/var/lib/postgresql
+      - ./postgres/data:/var/lib/postgresql/data
 
   redis:
-    container_name: toilet-dev-temp-store
+    container_name: redis-dev
     image: redis:7.0.4
     restart: always
     command: "redis-server /usr/local/etc/redis/redis.conf --save 20 1 --loglevel warning"
@@ -20,18 +20,20 @@ services:
       - 6379:6379
     volumes:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
-      - cache:/data
+      - ./redis/cache:/data
 
   mongo:
-    container_name: toilet-mongo-store
+    container_name: mongo-dev
     image: mongo
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_ROOT_PASSWORD: toilet
     ports:
-    - 27017:27017
+      - 27017:27017
+    volumes:
+      - './mongo/data/:/data/db'
 
-volumes:
-  cache:
-    driver: local
+# volumes:
+  # cache:
+  #   driver: local
