--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,12 @@
 {
-    "owners": [403308385539194880],
-    "playing": "ap help",
-    "playing_type": "",
-    "status": "dnd",
-    "error_reporting": "",
-    "guild_log": "",
+  "owners": [403308385539194880],
+  "emojis": {
+    "check": "<:check:954163199446499389>",
+    "fail": "<:red_tick:954499768124583947>"
+  },
+  "playing": ",help",
+  "playing_type": "",
+  "status": "dnd",
+  "error_reporting": "1030886659757195334",
+  "guild_log": "1031364215673458768"
 }
