Fix iunmute translation strings
Signed-off-by: Andreas <me@apap04.com>

--- a/.env.dev
+++ b/.env.dev
@@ -4,10 +4,10 @@
 
 DISCORD_PREFIX= # Your discord prefix
 DISCORD_TOKEN= # Your discord token
-MONGO_DB=mongodb://root:password@localhost:27017
+MONGO_DB=mongodb://root:password@localhost:27017 # USE host.docker.internal IF localhost DOESNT WORK!
 MONGO_NAME=toilet
-REDIS_URL=redis://default:@localhost:6379
-DATABASE_DSN=postgres://toilet:toilet@localhost:5432/toilet
+REDIS_URL=redis://default:@localhost:6379 # USE host.docker.internal IF localhost DOESNT WORK!
+DATABASE_DSN=postgres://toilet:toilet@localhost:5432/toilet # USE host.docker.internal IF localhost DOESNT WORK!
 LAST_FM_KEY= # Last.FM key
 LAST_FM_SECRET= # Last.FM secret
 TOP_GG_TOKEN= # Top.GG token
