change playing statsu
Signed-off-by: Andreas <me@apap04.com>

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "check": "<:check:954163199446499389>",
     "fail": "<:red_tick:954499768124583947>"
   },
-  "playing": ".help",
+  "playing": ",help",
   "playing_type": "",
   "status": "dnd",
   "error_reporting": "1030886659757195334",
