--- a/toilet-dev-docker/docker-compose.yml
+++ b/toilet-dev-docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+      - /var/lib/postgresql/data
 
   redis:
     container_name: redis-dev
@@ -33,7 +33,6 @@ services:
       - 27017:27017
     volumes:
       - './mongo/data/:/data/db'
-
-# volumes:
+  # volumes:
   # cache:
   #   driver: local
