--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,6 @@ media/*
 node_modules
 # config.json
 *.config.json
-toilet-dev-docker/mongo/data
-toilet-dev-docker/redis/cache
-toilet-dev-docker/postgres/data
+docker/mongo/data
+docker/redis/cache
+docker/postgres/data
