--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
+# Change the "MONGO_DB", "MONGO_NAME", "REDIS_URL", "DATABASE_DSN" accordingly.
 DISCORD_PREFIX= # Your discord prefix
 DISCORD_TOKEN= # Your discord token
-MONGO_DB= # Your Mongo DB URL
-MONGO_NAME= # Your Mongo DB db name
-REDIS_URL= # (Remove to use docker compose redis) Your Redis server (redis://default:REDIS_PASS@192.168.92.81:6379/ for Docker-Compose)
-REDIS_PASS= # Redis Password specified for Docker Compose. Use this in your Redis URL variable!
+MONGO_DB=mongodb://root:password@localhost:27017 # USE host.docker.internal IF localhost DOESNT WORK!
+MONGO_NAME=toilet
+REDIS_URL=redis://default:@localhost:6379 # USE host.docker.internal IF localhost DOESNT WORK!
+DATABASE_DSN=postgres://postgres:password@localhost:5432/app # USE host.docker.internal IF localhost DOESNT WORK!
 LAST_FM_KEY= # Last.FM key
 LAST_FM_SECRET= # Last.FM secret
 TOP_GG_TOKEN= # Top.GG token
