--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,3 @@
-toilet-dev-docker/mongo
-toilet-dev-docker/redis/cache
-toilet-dev-docker/postgres
+robert-dev-docker/mongo
+robert-dev-docker/redis/cache
+robert-dev-docker/postgres
